Fixed filter button overflow on smaller screens

--- a/src/components/css/CardList.css
+++ b/src/components/css/CardList.css
@@ -81,4 +81,17 @@
   .card-list li {
     width: 150px;
   }
+
+  .filter-container {
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+    margin-top: -10px;
+  }
+  
+  .filter-container button {
+    /* width: 50%; */
+    /* padding: 20px; */
+    height: 60px;
+    flex: 1 1 40%;
+  }
 }
